# crowdsourcing_ia_solver

./: CMakeLists.txt  Dockerfile.prod  LICENSE  README.md  deploy.sh  docker-compose.yml  send-request-local.sh
IP_Solver/: IA_Driver.cc  IA_IPSolve.cc  IA_IPSolve.hh  IA_model.lp  Makefile  batch.txt  wrapper.py
InputData/: CMakeLists.txt  IA_Data.cc  IA_Data.hh  Utils.cc  Utils.hh
Instances/: 1000.txt  C2-C3-big.txt  C3-B-P4-144.txt  L.txt  S-M.txt  S-M2.txt  S-M3.txt  S.txt  instance_generator_param.py  wrapper.py
Instances/AdditionalWorkers/: test-C2-case-P2-120-W202.json  test-C2-case-P2-120-W204.json  test-C2-case-P2-120-W206.json  test-C2-case-P2-120-W208.json  test-C2-case-P2-120-W210.json  test-C2-case-P2-120-W212.json
Instances/Oldies/: test-C2-A-P1-2000.json  test-C2-A-P1-5000.json  test-C2-A-P2-2000.json  test-C2-A-P2-5000.json  test-C2-A-P4-2000.json  test-C2-A-P6-2000.json  test-C2-A-P6-5000.json  test-C2-B-P1-2004.json  test-C2-B-P1-5004.json  test-C2-B-P2-2004.json  test-C2-B-P2-5004.json  test-C2-B-P4-2004.json  test-C2-B-P4-5004.json  test-C2-B-P6-2004.json  test-C2-B-P6-5004.json  test-C2-C-P1-2004.json  test-C2-C-P1-5004.json  test-C2-C-P2-2004.json  test-C2-C-P2-5004.json  (+26 more)
LocalSearch/: BATCH_BSA.json  BATCH_BSA_2.json  BATCH_SW_HC.json  CMakeLists.txt  IA_Basics.cc  IA_Basics.hh  IA_Helpers.cc  IA_Helpers.hh  IA_Main.cc  Makefile  RACE_BSA.json  batch.txt  command_line
LocalSearch/ItemAssignmentLS/ItemAssignmentLS.xcodeproj/: project.pbxproj
LocalSearch/ItemAssignmentLS/ItemAssignmentLS.xcodeproj/project.xcworkspace/xcuserdata/sara.xcuserdatad/: UserInterfaceState.xcuserstate
LocalSearch/ItemAssignmentLS/ItemAssignmentLS.xcodeproj/xcuserdata/sara.xcuserdatad/xcschemes/: xcschememanagement.plist
(+20 files in other folders)
